--- a/Client/package.json
+++ b/Client/package.json
@@ -9,6 +9,7 @@
     "start": "vue-cli-service serve --open"
   },
   "dependencies": {
+    "@firebase/firestore": "^2.3.8",
     "axios": "^0.21.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.12.1",
@@ -19,7 +20,7 @@
     "vee-validate": "^3.4.6",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1",
-    "vuefire": "^2.2.5",
+    "vuefire": "^3.0.0-alpha.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
